icon jumping fixed #23

--- a/src/main/resources/assets/css/background-sync.less
+++ b/src/main/resources/assets/css/background-sync.less
@@ -79,8 +79,14 @@
     .todo-app__item>i {
         width: 1em;
     }
+    .todo-app__textfield {
+        width: 100% !important; 
+    }
     .todo-app__inputfield {
-        height: 20px !important;
+        width: 100% !important; 
+        height: 20px !important; 
+        box-sizing: border-box !important;
+        background-color: orange !important;
     }
     .todo-app__inputfield:focus {
         margin-left: .55vw !important;
